.provarCaches/00D6C0000000xA6UAI/objects/sked__Job_Time_Constraint__c.object
<CustomObject>
    <description>This object is used to store constraints for time windows within which the job can be scheduled.</description>
    <fields>
        <fullName>sked__End_Before__c</fullName>
        <label>End Before</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>sked__Is_In_Violation__c</fullName>
        <formula>(sked__Job__r.sked__Start__c  &gt; sked__Start_Before__c) || 
(sked__Job__r.sked__Start__c  &lt; sked__Start_After__c ) ||
(sked__Job__r.sked__Finish__c &gt; sked__End_Before__c)</formula>
        <label>Is In Violation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>sked__Job__c</fullName>
        <label>Job</label>
        <referenceTo>sked__Job__c</referenceTo>
        <relationshipLabel>Job Time Constraints</relationshipLabel>
        <relationshipName>Job_Time_Constraints</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>sked__Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>sked__Start_After__c</fullName>
        <label>Start After</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>sked__Start_Before__c</fullName>
        <label>Start Before</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>sked__Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>SLA</fullName>
                    <default>true</default>
                    <label>SLA</label>
                </value>
                <value>
                    <fullName>Timeslot</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Job Time Constraint</label>
    <nameField>
        <displayFormat>JTC-{00000}</displayFormat>
        <label>Job Time Constraint Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Job Time Constraints</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>sked__ValidType</fullName>
        <active>true</active>
        <errorConditionFormula>AND(NOT(ISPICKVAL(sked__Type__c, &quot;SLA&quot;)), NOT(ISPICKVAL(sked__Type__c, &quot;Timeslot&quot;)))</errorConditionFormula>
        <errorDisplayField>sked__Type__c</errorDisplayField>
        <errorMessage>Type must be SLA or Timeslot</errorMessage>
    </validationRules>
</CustomObject>